static/homepage.css
/* Always set the map height explicitly to define the size of the div
         * element that contains the map. */
#map {
    height: 100%;
}
/* Optional: Makes the sample page fill the window. */
html, body {
    height: 100%;
    margin: 0;
    padding: 0;
}
#description {
    font-family: Roboto;
    font-size: 15px;
    font-weight: 300;
}

#searchContent{
    display:inline;
}

#searchResults{
	max-height: 400px;
	overflow:auto;
}


#infowindow-content .title {
    font-weight: bold;
}

#infowindow-content {
    display: none;
}

#map #infowindow-content {
    display: inline;
}

.tab-content{
	padding:5%;
}

.eventDiv{
	border-bottom-color:#CCC;
	border-bottom-weight:2px;
	border-bottom-style:solid;
	padding-bottom:10px;
}


#pac-input {
    background-color: #fff;
    font-family: Roboto;
    font-size: 15px;
    font-weight: 300;
    margin-left: 12px;
    padding: 0 11px 0 13px;
    text-overflow: ellipsis;

}

#pac-input:focus {
    border-color: #4d90fe;
}

#title {
    color: #fff;
    background-color: #4d90fe;
    font-size: 25px;
    font-weight: 500;
    padding: 6px 12px;
}
#target {
    width: 345px;
}

#map-outer {  height: 650px;
    padding: 20px;
    border: 2px solid #CCC;
    margin-bottom: 20px;
    background-color:#FFF }
#map-container { height: 400px }
@media all and (max-width: 991px) {
    #map-outer  { height: 650px }
}

